--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.1",
+    "vue-content-loading": "^1.5.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
