--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.2",
+    "jquery": "^3.3.1",
     "node-sass": "^4.9.1",
+    "popper.js": "^1.14.3",
     "sass-loader": "^7.0.3",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.1",
@@ -50,6 +52,7 @@
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-vue": "^4.0.0",
+    "expose-loader": "^0.7.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
