--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 /test/unit/coverage/
 /test/e2e/reports/
 selenium-debug.log
+/src/assets/client_secret_809257081995-nvlqqv3bqkk9v12snqh2rhqornvs0o8m.apps.googleusercontent.com.json
 
 # Editor directories and files
 .idea
