--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.2",
+    "googleapis": "^33.0.0",
     "jquery": "^3.3.1",
     "node-sass": "^4.9.1",
     "popper.js": "^1.14.3",
@@ -23,6 +24,7 @@
     "vue": "^2.5.2",
     "vue-axios": "^2.1.1",
     "vue-content-loading": "^1.5.0",
+    "vue-google-oauth2": "^1.0.9",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
