--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "googleapis": "^33.0.0",
     "jquery": "^3.3.1",
     "node-sass": "^4.11.0",
+    "nprogress": "^0.2.0",
     "popper.js": "^1.14.3",
     "sass-loader": "^7.0.3",
-    "vue": "^2.5.2",
+    "vue": "^2.6.8",
     "vue-axios": "^2.1.1",
     "vue-content-loading": "^1.5.0",
     "vue-google-oauth2": "^1.0.9",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^1.5.4"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.2",
@@ -90,7 +93,7 @@
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.6.8",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
